<resources>
    <string name="app_name">Gweiland App</string>
    <string name="no_internet_available">No internet available.</string>
    <string name="error_unexpected_message">Unexpected error occurred. We are working on it.</string>
    <string name="error_client_unexpected_message">Something technically is wrong. We are working on it.</string>
    <string name="error_server_unexpected_message">Oops! Something went wrong on the server. We are working on it.</string>
    <string name="eshop">€-$hop</string>
    <string name="exchange">Exchange</string>
    <string name="launchpads">Launchpads</string>
    <string name="wallet">Wallet</string>
    <string name="exchanges">Exchanges</string>
    <string name="search_cryptocurrency">Search Cryptocurrency</string>
    <string name="filter">Filter</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="nft_title">NFT</string>
    <string name="top_cryptocurrencies">Top Cryptocurrencies</string>
    <string name="view_all">View All</string>
    <string name="price">Price</string>
    <string name="volume_24h">Volume 24h</string>

</resources>